--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+# Data Science
 pandas==2.1.4
 numpy==1.26.2
 scipy==1.11.4
 scikit-learn==1.3.2
+spacy==3.7.2
+
+# Visualisation
 matplotlib==3.8.2
 seaborn==0.13.0
-pyarrow==14.0.1
 wordcloud==1.9.3
+
+# NLP 
 nltk==3.8.1
-spacy==3.7.2
+
+# Données
+pyarrow==14.0.1
+
+# Machine Learning avancé
+imbalanced-learn==0.14.1
+joblib==1.5.0
+
+# Mlflow
+mlflow==3.9.0
